--- a/tx-manager/src/main/resources/application.properties
+++ b/tx-manager/src/main/resources/application.properties
@@ -30,16 +30,17 @@ eureka.instance.prefer-ip-address=true
 ##redis 单点环境配置
 #redis
 #redis主机地址
-spring.redis.host=10.40.10.207
+spring.redis.host=10.40.10.206；10.40.10.205；10.40.10.207
+spring.redis.cluster.nodes=10.40.10.205:7000,10.40.10.206:7000,10.40.10.207:7000
 #redis主机端口
-spring.redis.port=7000
+#spring.redis.port=7000
 #redis链接密码
 spring.redis.password=
-spring.redis.pool.maxActive=10
-spring.redis.pool.maxWait=-1
-spring.redis.pool.maxIdle=5
-spring.redis.pool.minIdle=0
-spring.redis.timeout=0
+#spring.redis.pool.maxActive=10
+#spring.redis.pool.maxWait=-1
+#spring.redis.pool.maxIdle=5
+#spring.redis.pool.minIdle=0
+#spring.redis.timeout=0
 #####################################redis-end###################################################
 
 
@@ -49,14 +50,14 @@ spring.redis.timeout=0
 #业务模块与TxManager之间通讯的最大等待时间（单位：秒）
 #通讯时间是指：发起方与响应方之间完成一次的通讯时间。
 #该字段代表的是Tx-Client模块与TxManager模块之间的最大通讯时间，超过该时间未响应本次请求失败。
-tm.transaction.netty.delaytime = 5
+tm.transaction.netty.delaytime = 50
 
 #业务模块与TxManager之间通讯的心跳时间（单位：秒）
 tm.transaction.netty.hearttime = 15
 
 #存储到redis下的数据最大保存时间（单位：秒）
 #该字段仅代表的事务模块数据的最大保存时间，补偿数据会永久保存。
-tm.redis.savemaxtime=30
+tm.redis.savemaxtime=300
 
 #socket server Socket对外服务端口
 #TxManager的LCN协议的端口
@@ -91,7 +92,7 @@ tm.compensate.tryTime=30
 #各事务模块自动补偿的时间上限(毫秒)
 #指的是模块执行自动超时的最大时间，该最大时间若过段会导致事务机制异常，该时间必须要模块之间通讯的最大超过时间。
 #例如，若模块A与模块B，请求超时的最大时间是5秒，则建议改时间至少大于5秒。
-tm.compensate.maxWaitTime=5000
+tm.compensate.maxWaitTime=50000
 #######################################LCN-end#################################################
 
 
